@@ -1,23 +1,20 @@
 package net.cg4j.asm;
 
-import org.junit.jupiter.api.Test;
-import org.objectweb.asm.Opcodes;
+import static org.assertj.core.api.Assertions.assertThat;
 
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.Map;
 import java.util.Set;
+import org.junit.jupiter.api.Test;
+import org.objectweb.asm.Opcodes;
 
-import static org.assertj.core.api.Assertions.assertThat;
-
-/**
- * Unit tests for ClassHierarchy class.
- */
+/** Unit tests for ClassHierarchy class. */
 class ClassHierarchyTest {
 
   /**
-   * Unit test: Tests ClassHierarchy subtype queries.
-   * Expects correct transitive subtype relationships.
+   * Unit test: Tests ClassHierarchy subtype queries. Expects correct transitive subtype
+   * relationships.
    */
   @Test
   void testSubtypeQueries() {
@@ -25,32 +22,54 @@ class ClassHierarchyTest {
     Set<MethodSignature> methods = new HashSet<>();
     methods.add(new MethodSignature("java/lang/Object", "toString", "()Ljava/lang/String;"));
 
-    ClassInfo objectClass = new ClassInfo("java/lang/Object", null, Collections.emptySet(),
-        methods, Opcodes.ACC_PUBLIC, ClassLoaderType.PRIMORDIAL, false);
+    ClassInfo objectClass =
+        new ClassInfo(
+            "java/lang/Object",
+            null,
+            Collections.emptySet(),
+            methods,
+            Opcodes.ACC_PUBLIC,
+            ClassLoaderType.PRIMORDIAL,
+            false);
 
     Set<MethodSignature> parentMethods = new HashSet<>();
     parentMethods.add(new MethodSignature("com/example/Parent", "parentMethod", "()V"));
 
-    ClassInfo parentClass = new ClassInfo("com/example/Parent", "java/lang/Object",
-        Collections.emptySet(), parentMethods, Opcodes.ACC_PUBLIC, ClassLoaderType.APPLICATION, false);
+    ClassInfo parentClass =
+        new ClassInfo(
+            "com/example/Parent",
+            "java/lang/Object",
+            Collections.emptySet(),
+            parentMethods,
+            Opcodes.ACC_PUBLIC,
+            ClassLoaderType.APPLICATION,
+            false);
 
     Set<MethodSignature> childMethods = new HashSet<>();
     childMethods.add(new MethodSignature("com/example/Child", "childMethod", "()V"));
 
-    ClassInfo childClass = new ClassInfo("com/example/Child", "com/example/Parent",
-        Collections.emptySet(), childMethods, Opcodes.ACC_PUBLIC, ClassLoaderType.APPLICATION, false);
+    ClassInfo childClass =
+        new ClassInfo(
+            "com/example/Child",
+            "com/example/Parent",
+            Collections.emptySet(),
+            childMethods,
+            Opcodes.ACC_PUBLIC,
+            ClassLoaderType.APPLICATION,
+            false);
 
-    Map<String, ClassInfo> classes = Map.of(
-        "java/lang/Object", objectClass,
-        "com/example/Parent", parentClass,
-        "com/example/Child", childClass
-    );
+    Map<String, ClassInfo> classes =
+        Map.of(
+            "java/lang/Object", objectClass,
+            "com/example/Parent", parentClass,
+            "com/example/Child", childClass);
 
     ClassHierarchy hierarchy = new ClassHierarchy(classes);
 
     // Test subtype queries
     Set<String> objectSubtypes = hierarchy.getAllSubtypes("java/lang/Object");
-    assertThat(objectSubtypes).contains("java/lang/Object", "com/example/Parent", "com/example/Child");
+    assertThat(objectSubtypes)
+        .contains("java/lang/Object", "com/example/Parent", "com/example/Child");
 
     Set<String> parentSubtypes = hierarchy.getAllSubtypes("com/example/Parent");
     assertThat(parentSubtypes).contains("com/example/Parent", "com/example/Child");
@@ -61,32 +80,47 @@ class ClassHierarchyTest {
   }
 
   /**
-   * Unit test: Tests ClassHierarchy method lookup with inheritance.
-   * Expects methods to be found in parent classes.
+   * Unit test: Tests ClassHierarchy method lookup with inheritance. Expects methods to be found in
+   * parent classes.
    */
   @Test
   void testMethodLookup() {
     Set<MethodSignature> objectMethods = new HashSet<>();
     objectMethods.add(new MethodSignature("java/lang/Object", "toString", "()Ljava/lang/String;"));
 
-    ClassInfo objectClass = new ClassInfo("java/lang/Object", null, Collections.emptySet(),
-        objectMethods, Opcodes.ACC_PUBLIC, ClassLoaderType.PRIMORDIAL, false);
+    ClassInfo objectClass =
+        new ClassInfo(
+            "java/lang/Object",
+            null,
+            Collections.emptySet(),
+            objectMethods,
+            Opcodes.ACC_PUBLIC,
+            ClassLoaderType.PRIMORDIAL,
+            false);
 
     Set<MethodSignature> childMethods = new HashSet<>();
     childMethods.add(new MethodSignature("com/example/Child", "myMethod", "()V"));
 
-    ClassInfo childClass = new ClassInfo("com/example/Child", "java/lang/Object",
-        Collections.emptySet(), childMethods, Opcodes.ACC_PUBLIC, ClassLoaderType.APPLICATION, false);
+    ClassInfo childClass =
+        new ClassInfo(
+            "com/example/Child",
+            "java/lang/Object",
+            Collections.emptySet(),
+            childMethods,
+            Opcodes.ACC_PUBLIC,
+            ClassLoaderType.APPLICATION,
+            false);
 
-    Map<String, ClassInfo> classes = Map.of(
-        "java/lang/Object", objectClass,
-        "com/example/Child", childClass
-    );
+    Map<String, ClassInfo> classes =
+        Map.of(
+            "java/lang/Object", objectClass,
+            "com/example/Child", childClass);
 
     ClassHierarchy hierarchy = new ClassHierarchy(classes);
 
     // Child should find inherited method
-    MethodSignature inherited = hierarchy.lookupMethod("com/example/Child", "toString", "()Ljava/lang/String;");
+    MethodSignature inherited =
+        hierarchy.lookupMethod("com/example/Child", "toString", "()Ljava/lang/String;");
     assertThat(inherited).isNotNull();
     assertThat(inherited.getOwner()).isEqualTo("java/lang/Object");
 
@@ -97,34 +131,55 @@ class ClassHierarchyTest {
   }
 
   /**
-   * Unit test: Tests ClassHierarchy RTA virtual call resolution.
-   * Expects only instantiated types to be considered.
+   * Unit test: Tests ClassHierarchy RTA virtual call resolution. Expects only instantiated types to
+   * be considered.
    */
   @Test
   void testResolveVirtualCallRTA() {
     Set<MethodSignature> parentMethods = new HashSet<>();
     parentMethods.add(new MethodSignature("com/example/Parent", "doSomething", "()V"));
 
-    ClassInfo parentClass = new ClassInfo("com/example/Parent", "java/lang/Object",
-        Collections.emptySet(), parentMethods, Opcodes.ACC_PUBLIC, ClassLoaderType.APPLICATION, false);
+    ClassInfo parentClass =
+        new ClassInfo(
+            "com/example/Parent",
+            "java/lang/Object",
+            Collections.emptySet(),
+            parentMethods,
+            Opcodes.ACC_PUBLIC,
+            ClassLoaderType.APPLICATION,
+            false);
 
     Set<MethodSignature> child1Methods = new HashSet<>();
     child1Methods.add(new MethodSignature("com/example/Child1", "doSomething", "()V"));
 
-    ClassInfo child1Class = new ClassInfo("com/example/Child1", "com/example/Parent",
-        Collections.emptySet(), child1Methods, Opcodes.ACC_PUBLIC, ClassLoaderType.APPLICATION, false);
+    ClassInfo child1Class =
+        new ClassInfo(
+            "com/example/Child1",
+            "com/example/Parent",
+            Collections.emptySet(),
+            child1Methods,
+            Opcodes.ACC_PUBLIC,
+            ClassLoaderType.APPLICATION,
+            false);
 
     Set<MethodSignature> child2Methods = new HashSet<>();
     // Child2 inherits doSomething from Parent
 
-    ClassInfo child2Class = new ClassInfo("com/example/Child2", "com/example/Parent",
-        Collections.emptySet(), child2Methods, Opcodes.ACC_PUBLIC, ClassLoaderType.APPLICATION, false);
+    ClassInfo child2Class =
+        new ClassInfo(
+            "com/example/Child2",
+            "com/example/Parent",
+            Collections.emptySet(),
+            child2Methods,
+            Opcodes.ACC_PUBLIC,
+            ClassLoaderType.APPLICATION,
+            false);
 
-    Map<String, ClassInfo> classes = Map.of(
-        "com/example/Parent", parentClass,
-        "com/example/Child1", child1Class,
-        "com/example/Child2", child2Class
-    );
+    Map<String, ClassInfo> classes =
+        Map.of(
+            "com/example/Parent", parentClass,
+            "com/example/Child1", child1Class,
+            "com/example/Child2", child2Class);
 
     ClassHierarchy hierarchy = new ClassHierarchy(classes);
 
@@ -132,27 +187,36 @@ class ClassHierarchyTest {
     Set<String> instantiatedTypes = Set.of("com/example/Child1");
 
     // RTA should only find Child1.doSomething
-    Set<MethodSignature> rtaTargets = hierarchy.resolveVirtualCallRTA(
-        "com/example/Parent", "doSomething", "()V", instantiatedTypes);
+    Set<MethodSignature> rtaTargets =
+        hierarchy.resolveVirtualCallRTA(
+            "com/example/Parent", "doSomething", "()V", instantiatedTypes);
 
     assertThat(rtaTargets).hasSize(1);
     assertThat(rtaTargets).anyMatch(m -> m.getOwner().equals("com/example/Child1"));
   }
 
   /**
-   * Unit test: Tests ClassHierarchy resolveCallSiteRTA method.
-   * Expects static calls to resolve regardless of instantiation and virtual calls to respect instantiation.
+   * Unit test: Tests ClassHierarchy resolveCallSiteRTA method. Expects static calls to resolve
+   * regardless of instantiation and virtual calls to respect instantiation.
    */
   @Test
   void testResolveCallSiteRTA() {
     Set<MethodSignature> methods = new HashSet<>();
-    methods.add(new MethodSignature("com/example/MyClass", "staticMethod", "()V",
-        Opcodes.ACC_PUBLIC | Opcodes.ACC_STATIC));
-    methods.add(new MethodSignature("com/example/MyClass", "instanceMethod", "()V",
-        Opcodes.ACC_PUBLIC));
+    methods.add(
+        new MethodSignature(
+            "com/example/MyClass", "staticMethod", "()V", Opcodes.ACC_PUBLIC | Opcodes.ACC_STATIC));
+    methods.add(
+        new MethodSignature("com/example/MyClass", "instanceMethod", "()V", Opcodes.ACC_PUBLIC));
 
-    ClassInfo myClass = new ClassInfo("com/example/MyClass", "java/lang/Object",
-        Collections.emptySet(), methods, Opcodes.ACC_PUBLIC, ClassLoaderType.APPLICATION, false);
+    ClassInfo myClass =
+        new ClassInfo(
+            "com/example/MyClass",
+            "java/lang/Object",
+            Collections.emptySet(),
+            methods,
+            Opcodes.ACC_PUBLIC,
+            ClassLoaderType.APPLICATION,
+            false);
 
     Map<String, ClassInfo> classes = Map.of("com/example/MyClass", myClass);
     ClassHierarchy hierarchy = new ClassHierarchy(classes);
@@ -160,15 +224,16 @@ class ClassHierarchyTest {
     Set<String> instantiatedTypes = Set.of("com/example/MyClass");
 
     // Static call should resolve regardless of instantiation
-    CallSite staticCall = new CallSite(Opcodes.INVOKESTATIC, "com/example/MyClass",
-        "staticMethod", "()V", false);
+    CallSite staticCall =
+        new CallSite(Opcodes.INVOKESTATIC, "com/example/MyClass", "staticMethod", "()V", false);
     Set<MethodSignature> staticTargets = hierarchy.resolveCallSiteRTA(staticCall, Set.of());
     assertThat(staticTargets).hasSize(1);
 
     // Virtual call should respect instantiated types
-    CallSite virtualCall = new CallSite(Opcodes.INVOKEVIRTUAL, "com/example/MyClass",
-        "instanceMethod", "()V", false);
-    Set<MethodSignature> virtualTargets = hierarchy.resolveCallSiteRTA(virtualCall, instantiatedTypes);
+    CallSite virtualCall =
+        new CallSite(Opcodes.INVOKEVIRTUAL, "com/example/MyClass", "instanceMethod", "()V", false);
+    Set<MethodSignature> virtualTargets =
+        hierarchy.resolveCallSiteRTA(virtualCall, instantiatedTypes);
     assertThat(virtualTargets).hasSize(1);
 
     // Virtual call with empty instantiated types should return empty
@@ -177,28 +242,42 @@ class ClassHierarchyTest {
   }
 
   /**
-   * Unit test: Tests registering a synthetic lambda class into the hierarchy.
-   * Expects the class to appear in lookups, subclass maps, and implementor maps.
+   * Unit test: Tests registering a synthetic lambda class into the hierarchy. Expects the class to
+   * appear in lookups, subclass maps, and implementor maps.
    */
   @Test
   void testRegisterSyntheticClass() {
     // Build hierarchy with an interface
-    ClassInfo objectClass = new ClassInfo("java/lang/Object", null, Collections.emptySet(),
-        Collections.emptySet(), Opcodes.ACC_PUBLIC, ClassLoaderType.PRIMORDIAL, false);
+    ClassInfo objectClass =
+        new ClassInfo(
+            "java/lang/Object",
+            null,
+            Collections.emptySet(),
+            Collections.emptySet(),
+            Opcodes.ACC_PUBLIC,
+            ClassLoaderType.PRIMORDIAL,
+            false);
 
     Set<MethodSignature> ifaceMethods = new HashSet<>();
-    ifaceMethods.add(new MethodSignature("com/example/MyInterface", "doIt", "()V",
-        Opcodes.ACC_PUBLIC | Opcodes.ACC_ABSTRACT));
+    ifaceMethods.add(
+        new MethodSignature(
+            "com/example/MyInterface", "doIt", "()V", Opcodes.ACC_PUBLIC | Opcodes.ACC_ABSTRACT));
 
-    ClassInfo ifaceClass = new ClassInfo("com/example/MyInterface", "java/lang/Object",
-        Collections.emptySet(), ifaceMethods,
-        Opcodes.ACC_PUBLIC | Opcodes.ACC_INTERFACE | Opcodes.ACC_ABSTRACT,
-        ClassLoaderType.APPLICATION, false);
+    ClassInfo ifaceClass =
+        new ClassInfo(
+            "com/example/MyInterface",
+            "java/lang/Object",
+            Collections.emptySet(),
+            ifaceMethods,
+            Opcodes.ACC_PUBLIC | Opcodes.ACC_INTERFACE | Opcodes.ACC_ABSTRACT,
+            ClassLoaderType.APPLICATION,
+            false);
 
-    Map<String, ClassInfo> classes = new java.util.HashMap<>(Map.of(
-        "java/lang/Object", objectClass,
-        "com/example/MyInterface", ifaceClass
-    ));
+    Map<String, ClassInfo> classes =
+        new java.util.HashMap<>(
+            Map.of(
+                "java/lang/Object", objectClass,
+                "com/example/MyInterface", ifaceClass));
 
     ClassHierarchy hierarchy = new ClassHierarchy(classes);
 
@@ -207,18 +286,17 @@ class ClassHierarchyTest {
 
     // Register a synthetic lambda class implementing the interface
     Set<MethodSignature> lambdaMethods = new HashSet<>();
-    lambdaMethods.add(new MethodSignature("wala/lambda$test$0", "doIt", "()V",
-        Opcodes.ACC_PUBLIC));
+    lambdaMethods.add(new MethodSignature("wala/lambda$test$0", "doIt", "()V", Opcodes.ACC_PUBLIC));
 
-    ClassInfo syntheticClass = new ClassInfo(
-        "wala/lambda$test$0",
-        "java/lang/Object",
-        Set.of("com/example/MyInterface"),
-        lambdaMethods,
-        Opcodes.ACC_PUBLIC | Opcodes.ACC_FINAL | Opcodes.ACC_SYNTHETIC,
-        ClassLoaderType.APPLICATION,
-        false
-    );
+    ClassInfo syntheticClass =
+        new ClassInfo(
+            "wala/lambda$test$0",
+            "java/lang/Object",
+            Set.of("com/example/MyInterface"),
+            lambdaMethods,
+            Opcodes.ACC_PUBLIC | Opcodes.ACC_FINAL | Opcodes.ACC_SYNTHETIC,
+            ClassLoaderType.APPLICATION,
+            false);
 
     hierarchy.registerSyntheticClass(syntheticClass);
 
@@ -228,8 +306,7 @@ class ClassHierarchyTest {
     assertThat(hierarchy.size()).isEqualTo(3);
 
     // Verify subclass relation
-    assertThat(hierarchy.getDirectSubclasses("java/lang/Object"))
-        .contains("wala/lambda$test$0");
+    assertThat(hierarchy.getDirectSubclasses("java/lang/Object")).contains("wala/lambda$test$0");
 
     // Verify implementor relation
     assertThat(hierarchy.getDirectImplementors("com/example/MyInterface"))
@@ -246,34 +323,59 @@ class ClassHierarchyTest {
   }
 
   /**
-   * Unit test: Tests implemented interface lookups are cached and stable.
-   * Expects repeated lookups to return the same computed interface closure.
+   * Unit test: Tests implemented interface lookups are cached and stable. Expects repeated lookups
+   * to return the same computed interface closure.
    */
   @Test
   void testGetAllImplementedInterfaces_CachesTransitiveClosure() {
-    ClassInfo objectClass = new ClassInfo("java/lang/Object", null, Collections.emptySet(),
-        Collections.emptySet(), Opcodes.ACC_PUBLIC, ClassLoaderType.PRIMORDIAL, false);
+    ClassInfo objectClass =
+        new ClassInfo(
+            "java/lang/Object",
+            null,
+            Collections.emptySet(),
+            Collections.emptySet(),
+            Opcodes.ACC_PUBLIC,
+            ClassLoaderType.PRIMORDIAL,
+            false);
 
-    ClassInfo baseInterface = new ClassInfo("com/example/BaseInterface", "java/lang/Object",
-        Collections.emptySet(), Collections.emptySet(),
-        Opcodes.ACC_PUBLIC | Opcodes.ACC_INTERFACE | Opcodes.ACC_ABSTRACT,
-        ClassLoaderType.APPLICATION, false);
+    ClassInfo baseInterface =
+        new ClassInfo(
+            "com/example/BaseInterface",
+            "java/lang/Object",
+            Collections.emptySet(),
+            Collections.emptySet(),
+            Opcodes.ACC_PUBLIC | Opcodes.ACC_INTERFACE | Opcodes.ACC_ABSTRACT,
+            ClassLoaderType.APPLICATION,
+            false);
 
-    ClassInfo childInterface = new ClassInfo("com/example/ChildInterface", "java/lang/Object",
-        Set.of("com/example/BaseInterface"), Collections.emptySet(),
-        Opcodes.ACC_PUBLIC | Opcodes.ACC_INTERFACE | Opcodes.ACC_ABSTRACT,
-        ClassLoaderType.APPLICATION, false);
+    ClassInfo childInterface =
+        new ClassInfo(
+            "com/example/ChildInterface",
+            "java/lang/Object",
+            Set.of("com/example/BaseInterface"),
+            Collections.emptySet(),
+            Opcodes.ACC_PUBLIC | Opcodes.ACC_INTERFACE | Opcodes.ACC_ABSTRACT,
+            ClassLoaderType.APPLICATION,
+            false);
 
-    ClassInfo implClass = new ClassInfo("com/example/MyImpl", "java/lang/Object",
-        Set.of("com/example/ChildInterface"), Collections.emptySet(),
-        Opcodes.ACC_PUBLIC, ClassLoaderType.APPLICATION, false);
+    ClassInfo implClass =
+        new ClassInfo(
+            "com/example/MyImpl",
+            "java/lang/Object",
+            Set.of("com/example/ChildInterface"),
+            Collections.emptySet(),
+            Opcodes.ACC_PUBLIC,
+            ClassLoaderType.APPLICATION,
+            false);
 
-    ClassHierarchy hierarchy = new ClassHierarchy(new java.util.HashMap<>(Map.of(
-        "java/lang/Object", objectClass,
-        "com/example/BaseInterface", baseInterface,
-        "com/example/ChildInterface", childInterface,
-        "com/example/MyImpl", implClass
-    )));
+    ClassHierarchy hierarchy =
+        new ClassHierarchy(
+            new java.util.HashMap<>(
+                Map.of(
+                    "java/lang/Object", objectClass,
+                    "com/example/BaseInterface", baseInterface,
+                    "com/example/ChildInterface", childInterface,
+                    "com/example/MyImpl", implClass)));
 
     Set<String> firstLookup = hierarchy.getAllImplementedInterfaces("com/example/MyImpl");
     Set<String> secondLookup = hierarchy.getAllImplementedInterfaces("com/example/MyImpl");
@@ -286,42 +388,61 @@ class ClassHierarchyTest {
   }
 
   /**
-   * Unit test: Tests synthetic class registration invalidates implemented-interface cache.
-   * Expects new interface closures to become visible after adding a synthetic class.
+   * Unit test: Tests synthetic class registration invalidates implemented-interface cache. Expects
+   * new interface closures to become visible after adding a synthetic class.
    */
   @Test
   void testRegisterSyntheticClass_InvalidatesImplementedInterfacesCache() {
-    ClassInfo objectClass = new ClassInfo("java/lang/Object", null, Collections.emptySet(),
-        Collections.emptySet(), Opcodes.ACC_PUBLIC, ClassLoaderType.PRIMORDIAL, false);
+    ClassInfo objectClass =
+        new ClassInfo(
+            "java/lang/Object",
+            null,
+            Collections.emptySet(),
+            Collections.emptySet(),
+            Opcodes.ACC_PUBLIC,
+            ClassLoaderType.PRIMORDIAL,
+            false);
 
-    ClassInfo parentInterface = new ClassInfo("com/example/ParentInterface", "java/lang/Object",
-        Collections.emptySet(), Collections.emptySet(),
-        Opcodes.ACC_PUBLIC | Opcodes.ACC_INTERFACE | Opcodes.ACC_ABSTRACT,
-        ClassLoaderType.APPLICATION, false);
+    ClassInfo parentInterface =
+        new ClassInfo(
+            "com/example/ParentInterface",
+            "java/lang/Object",
+            Collections.emptySet(),
+            Collections.emptySet(),
+            Opcodes.ACC_PUBLIC | Opcodes.ACC_INTERFACE | Opcodes.ACC_ABSTRACT,
+            ClassLoaderType.APPLICATION,
+            false);
 
-    ClassInfo childInterface = new ClassInfo("com/example/ChildInterface", "java/lang/Object",
-        Set.of("com/example/ParentInterface"), Collections.emptySet(),
-        Opcodes.ACC_PUBLIC | Opcodes.ACC_INTERFACE | Opcodes.ACC_ABSTRACT,
-        ClassLoaderType.APPLICATION, false);
+    ClassInfo childInterface =
+        new ClassInfo(
+            "com/example/ChildInterface",
+            "java/lang/Object",
+            Set.of("com/example/ParentInterface"),
+            Collections.emptySet(),
+            Opcodes.ACC_PUBLIC | Opcodes.ACC_INTERFACE | Opcodes.ACC_ABSTRACT,
+            ClassLoaderType.APPLICATION,
+            false);
 
-    ClassHierarchy hierarchy = new ClassHierarchy(new java.util.HashMap<>(Map.of(
-        "java/lang/Object", objectClass,
-        "com/example/ParentInterface", parentInterface,
-        "com/example/ChildInterface", childInterface
-    )));
+    ClassHierarchy hierarchy =
+        new ClassHierarchy(
+            new java.util.HashMap<>(
+                Map.of(
+                    "java/lang/Object", objectClass,
+                    "com/example/ParentInterface", parentInterface,
+                    "com/example/ChildInterface", childInterface)));
 
     assertThat(hierarchy.getAllImplementedInterfaces("com/example/ChildInterface"))
         .containsExactly("com/example/ParentInterface");
 
-    ClassInfo syntheticClass = new ClassInfo(
-        "wala/lambda$cache$0",
-        "java/lang/Object",
-        Set.of("com/example/ChildInterface"),
-        Collections.emptySet(),
-        Opcodes.ACC_PUBLIC | Opcodes.ACC_FINAL | Opcodes.ACC_SYNTHETIC,
-        ClassLoaderType.APPLICATION,
-        false
-    );
+    ClassInfo syntheticClass =
+        new ClassInfo(
+            "wala/lambda$cache$0",
+            "java/lang/Object",
+            Set.of("com/example/ChildInterface"),
+            Collections.emptySet(),
+            Opcodes.ACC_PUBLIC | Opcodes.ACC_FINAL | Opcodes.ACC_SYNTHETIC,
+            ClassLoaderType.APPLICATION,
+            false);
 
     hierarchy.registerSyntheticClass(syntheticClass);
 
@@ -332,32 +453,52 @@ class ClassHierarchyTest {
   }
 
   /**
-   * Unit test: Tests default interface dispatch resolution for concrete implementors.
-   * Expects the interface default method to be selected when the class does not override it.
+   * Unit test: Tests default interface dispatch resolution for concrete implementors. Expects the
+   * interface default method to be selected when the class does not override it.
    */
   @Test
   void testResolveVirtualTarget_UsesDefaultInterfaceMethod() {
-    ClassInfo objectClass = new ClassInfo("java/lang/Object", null, Collections.emptySet(),
-        Collections.emptySet(), Opcodes.ACC_PUBLIC, ClassLoaderType.PRIMORDIAL, false);
+    ClassInfo objectClass =
+        new ClassInfo(
+            "java/lang/Object",
+            null,
+            Collections.emptySet(),
+            Collections.emptySet(),
+            Opcodes.ACC_PUBLIC,
+            ClassLoaderType.PRIMORDIAL,
+            false);
 
     Set<MethodSignature> ifaceMethods = new HashSet<>();
-    ifaceMethods.add(new MethodSignature("com/example/MyInterface", "doIt", "()V",
-        Opcodes.ACC_PUBLIC));
+    ifaceMethods.add(
+        new MethodSignature("com/example/MyInterface", "doIt", "()V", Opcodes.ACC_PUBLIC));
 
-    ClassInfo ifaceClass = new ClassInfo("com/example/MyInterface", "java/lang/Object",
-        Collections.emptySet(), ifaceMethods,
-        Opcodes.ACC_PUBLIC | Opcodes.ACC_INTERFACE | Opcodes.ACC_ABSTRACT,
-        ClassLoaderType.APPLICATION, false);
+    ClassInfo ifaceClass =
+        new ClassInfo(
+            "com/example/MyInterface",
+            "java/lang/Object",
+            Collections.emptySet(),
+            ifaceMethods,
+            Opcodes.ACC_PUBLIC | Opcodes.ACC_INTERFACE | Opcodes.ACC_ABSTRACT,
+            ClassLoaderType.APPLICATION,
+            false);
 
-    ClassInfo implClass = new ClassInfo("com/example/MyImpl", "java/lang/Object",
-        Set.of("com/example/MyInterface"), Collections.emptySet(),
-        Opcodes.ACC_PUBLIC, ClassLoaderType.APPLICATION, false);
+    ClassInfo implClass =
+        new ClassInfo(
+            "com/example/MyImpl",
+            "java/lang/Object",
+            Set.of("com/example/MyInterface"),
+            Collections.emptySet(),
+            Opcodes.ACC_PUBLIC,
+            ClassLoaderType.APPLICATION,
+            false);
 
-    ClassHierarchy hierarchy = new ClassHierarchy(new java.util.HashMap<>(Map.of(
-        "java/lang/Object", objectClass,
-        "com/example/MyInterface", ifaceClass,
-        "com/example/MyImpl", implClass
-    )));
+    ClassHierarchy hierarchy =
+        new ClassHierarchy(
+            new java.util.HashMap<>(
+                Map.of(
+                    "java/lang/Object", objectClass,
+                    "com/example/MyInterface", ifaceClass,
+                    "com/example/MyImpl", implClass)));
 
     MethodSignature target = hierarchy.resolveVirtualTarget("com/example/MyImpl", "doIt", "()V");
 
